--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,11 @@
   font-weight: bold;
   font-family: 'Nunito', sans-serif;
   background-color: #9C81CC;
-  color: white;
+  color: black;
+}
+
+/* Disable hover effect for items with no-hover class */
+.no-hover:hover {
+  color: black;
+  cursor: pointer;
 }
